force-app/main/default/objects/Cuenta__c/Cuenta__c.object-meta.xml
<CustomObject>
    <label>Cuenta</label>
    <nameField>
        <label>Cuenta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cuentas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>