force-app/main/default/objects/Cuenta__c/fields/TotalOppGan__c.field-meta.xml
<CustomField>
    <fullName>TotalOppGan__c</fullName>
    <label>Total oportunidades ganadas</label>
    <summaryForeignKey>Factura__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>