force-app/main/default/objects/Cuenta__c/recordTypes/Cliente.recordType-meta.xml
<RecordType>
    <fullName>Cliente</fullName>
    <active>true</active>
    <label>Cliente</label>
</RecordType>