force-app/main/default/objects/Cuenta__c/recordTypes/prueba.recordType-meta.xml
<RecordType>
    <fullName>prueba</fullName>
    <active>true</active>
    <label>prueba</label>
</RecordType>