force-app/main/default/objects/Cuenta__c/validationRules/CIF.validationRule-meta.xml
<ValidationRule>
    <fullName>CIF</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(CIF__c)),
  OR(
    LEN(CIF__c) &lt;&gt; 9,
    NOT(REGEX(CIF__c, &quot;^[0-9]{8}[A-Za-z]$&quot;))
  )
)</errorConditionFormula>
    <errorDisplayField>CIF__c</errorDisplayField>
    <errorMessage>El CIF debe tener exactamente 9 caracteres: 8 números seguidos de una letra.</errorMessage>
</ValidationRule>