force-app/main/default/objects/Cuenta__c/validationRules/CIF_blanco.validationRule-meta.xml
<ValidationRule>
    <fullName>CIF_blanco</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK(CIF__c)
)</errorConditionFormula>
    <errorMessage>Campo CIF no puede estar en blanco</errorMessage>
</ValidationRule>